tests/NormalTests/paczka1/fuzzy1/58567666.err
Error in line 15: BWdQX6oT A429 90,3
Error in line 22: Dgj4w9 S296 5,3
Error in line 12: c8v A429 83,6
Error in line 40: BWdQX6oT A*94 77,8
